@@ -1,3 +1,10 @@
+2005-12-08  Christian Persch  <chpe@cvs.gnome.org>
+
+	* src/pdm-dialog.c: (pdm_dialog_cookies_construct),
+	(pdm_dialog_cookie_add):
+
+	Fix crash when adding a cookie while the dialogue is open.
+
 2005-12-07  Christian Persch  <chpe@cvs.gnome.org>
 
 	* embed/mozilla/EphyFind.cpp:
